# OSLabs

./: README.md  server.cpp
FourthLab/: main.cpp
FourthOSLab/: CMakeLists.txt  Pi.cpp  Pi.hpp  README.md  SinIntegral.cpp  SinIntegral.hpp  main.cpp  maindynamic.cpp  М8О-206Б-22_Варнак_4Lab.docx
SecondOSLab/: README.md  input.txt  maintry1.cpp  maintry2.cpp  М8О-206Б-22_Варнак_Е_В_2Lab.doc
ThirdOSLab/: CMakeLists.txt  Child1.cpp  README.md  child.cpp  main.cpp  М8О-206Б-22_Варнак_3Lab (1).wps  М8О-206Б-22_Варнак_3Lab.wps
eighthOSLab/: Отчет_8Lab_Varnak.docx
fifth-seventhOSLab/: CMakeLists.txt  calcNode.hpp  client.cpp  server.cpp  tree.hpp  zmq_functions.hpp  Отчет_5-7Lab_Varnak.docx
firstLabOS/: CMakeLists.txt  Child1.cpp  Child2.cpp  Readme.md  main.cpp  Отчет1_ЛР_OS_Варнак_Е_В.docx
КП/: CMakeLists.txt  client.cpp  game_functions.hpp  map.cpp  server.cpp  Отчет_КП_Varnak.docx
